# Spring

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.distribution  README.md  install.sh  spring
.github/workflows/: c-cpp.yml
boost-cmake/: .gitignore  CMakeLists.txt
boost-cmake/libs/: iostreams.cmake  locale.cmake  mpi.cmake
logs/: ERR194146_random.quality_counts.7z  SRR554369_entropy_computation.log.old  entropy_computation_log
src/: BooPHF.h  bitset_util.cpp  bitset_util.h  call_template_functions.cpp  call_template_functions.h  decoder_pe.cpp  decompress.cpp  decompress.h  encoder.cpp  encoder.h  generate_reordered_fastq.cpp  generate_reordered_fastq.h  main.cpp  pack_order.cpp  pack_order.h  params.h  pe_encode.cpp  pe_encode.h  preprocess.cpp  preprocess.h  reorder.cpp  reorder.h  reorder_compress_quality_id.cpp  reorder_compress_quality_id.h  reorder_compress_quality_id_pe.cpp  reorder_compress_streams.cpp  reorder_compress_streams.h  reorder_no_left_search.cpp  reorder_no_left_search_sing.cpp  spring.cpp  spring.h  test.cpp  test1.cpp  util.cpp  util.h
src/ID_compression/include/: Arithmetic_stream.h  id_compression.h  sam_block.h  stream_model.h
src/ID_compression/src/: Arithmetic_stream.cpp  Makefile  compression.cpp  id_compression.cpp  io_functions.cpp  sam_file_allocation.c  sam_file_allocation.cpp  sam_models.cpp  stream_model.cpp
src/bcm/: bcm.cpp  bcm.h  divsufsort.cpp  divsufsort.h
src/id_compression/include/: Arithmetic_stream.h  id_compression.h  sam_block.h  stream_model.h
src/id_compression/src/: Arithmetic_stream.cpp  compression.cpp  id_compression.cpp  io_functions.cpp  sam_file_allocation.cpp  sam_models.cpp  stream_model.cpp
src/libbsc/: AUTHORS  LICENSE  bsc  bsc.cpp  bsc.h  bsc_str_array.cpp
src/libbsc/libbsc/bwt/: bwt.cpp
src/libbsc/libbsc/bwt/divsufsort/: divsufsort.c
src/libbsc/libbsc/coder/: coder.cpp
src/libbsc/libbsc/filters/: detectors.cpp  preprocessing.cpp
src/libbsc/libbsc/libbsc/: libbsc.cpp
src/libbsc/libbsc/lzp/: lzp.cpp
src/old_src/: decoder_se.cpp  decompress_quality_id_pe.cpp  decompress_quality_id_se.cpp  encoder.cpp  pack_order.cpp  pe_decode.cpp  unpack_order.cpp
src/old_src/ID_compression/: Makefile  test  test.py
src/old_src/ID_compression/include/: Arithmetic_stream.h  sam_block.h  stream_model.h
src/old_src/ID_compression/src/: Arithmetic_stream.c  compression.c  id_compression.c  io_functions.c  sam_models.c  stream_model.c
src/old_src/config/: config.py  config1.py  config2.py  config3.py  config4.py  config5.py  config6.py
src/old_src/cpp/noiseless/: matchsort1.cpp  matchsort2.cpp  reordernoiseless.cpp
src/old_src/cpp/noisy/: .gitignore  config.h  decoder.cpp  decoder_preserve.cpp  decoder_preserve_1.cpp  decoder_preserve_2.cpp  encoder.cpp  matchsort3.cpp  matchsort4.cpp  matchsort5.cpp  matchsort6.cpp  matchsort7.cpp  matchsort7_v10.cpp  matchsort7_v11.cpp  matchsort7_v12.cpp  matchsort7_v13.cpp  matchsort7_v14.cpp  matchsort7_v16.cpp  matchsort7_v17.cpp  matchsort7_v18.cpp  matchsort7_v19.cpp  matchsort7_v2.cpp  matchsort7_v3.cpp  matchsort7_v4.cpp  matchsort7_v5.cpp  matchsort7_v6.cpp  matchsort7_v7.cpp  matchsort7_v8.cpp  matchsort7_v8_new.cpp  matchsort7_v9.cpp  matchsort9.cpp  merge_N.cpp  merge_quality.cpp  preprocess.cpp  preprocess_final.cpp  preprocess_final_q.cpp  reorder_quality.cpp  reordernoisy.cpp
src/old_src/libbsc/: bsc.cpp
src/old_src/python/noiseless/: encodernoiseless.py  matchorcom.py  matchorcomRC.py  matchorcom_skip.py  matchsort.py  matchsort1.py  matchsortRC.py  matchsort_skip.py  matchsort_skipRC.py  packer.py  packer1.py
src/old_src/python/noisy/: decodernoisy.py  encodernoisy.py  encodernoisy_parallel.py  matchpacknoisyRC.py  matchpacknoisynoRC_noref.py  matchsortnoisy.py  matchsortnoisy1.py  matchsortnoisy2.py  matchsortnoisy4.py  matchsortnoisy5.py  matchsortnoisy6.py  matchsortnoisy7.py  matchsortnoisy8.py  matchsortnoisy9.py  packernoisy.py  packernoisy1.py  packernoisy2.py  packernoisy2_noN.py  packernoisy2_parallel.py  packernoisy3.py  packernoisy4.py  packernoisy4_noN.py  packernoisy6.py  unpackernoisy6.py
src/old_src/qvz/: Makefile  generate_rd.sh  test.sh
src/old_src/qvz/include/: cluster.h  codebook.h  pmf.h  quantizer.h  util.h  well.h
src/old_src/qvz/src/: Makefile  arith.c  cluster.c  codebook.c  lines.c  main.c  quantizer.c  qv_stream.c  util.c
src/old_src/qvz_1/include/: distortion.h  lines.h  pmf.h  quantizer.h  qv_compressor.h  util.h
src/old_src/qvz_1/src/: arith.cpp  distortion.cpp  lines.cpp  os_stream.cpp  quantizer.cpp  qv_compressor.cpp  qv_stream.cpp
src/old_src/reorder_1d/: reorder.h
src/old_src/run_sh/: old_run_default.sh  run.sh  run_exp_final.sh  run_experiments.sh
src/qvz/: README.md
src/qvz/include/: cluster.h  codebook.h  distortion.h  lines.h  main.h  quantizer.h  qv_compressor.h  qvz.h  well.h
src/qvz/src/: Makefile.apple  arith.cpp  cluster.cpp  codebook.cpp  distortion.c  distortion.cpp  lines.cpp  main.cpp  os_stream.c  os_stream.cpp  pmf.c  pmf.cpp  quantizer.cpp  qv_compressor.c  qv_compressor.cpp  qv_stream.cpp  qvz.cpp  util.cpp  well.c  well.cpp
src/qvz/src/temp/: mse_check.c
util/: .gitignore  RLE.cpp  boost_openmp_bcm_test.cpp  boost_openmp_bsc_test.cpp  compute_entropy.py  fastore_compress.sh  io_experiments.cpp  noise_entropy.py  quality_counts.cpp  quality_entropy.py  quality_illumina_bin.cpp  quality_pack.cpp  quality_transpose.cpp  quality_unpack.cpp  readlendistr.cpp  splitlongreads.cpp  test_1.fasta  test_1.fastq  test_2.fasta  test_2.fastq  test_script.sh
util/scripts/: run_exp_SPRING_additional.sh  run_exp_SPRING_additional_1.sh  run_exp_SPRING_additional_2.sh  run_exp_SPRING_lossless.sh  run_exp_SPRING_lossy.sh  run_exp_dsrc.sh  run_exp_fastore.sh  run_exp_fastore_fast.sh  run_exp_fastore_lossy.sh  run_exp_fastore_lossy_fast.sh  run_exp_pigz.sh
